terminado menu mobile

--- a/Headers animados e responsivos com HTML, CSS e JS/Omnitech/css/style.css
+++ b/Headers animados e responsivos com HTML, CSS e JS/Omnitech/css/style.css
@@ -65,7 +65,40 @@ header {
     font-family: "Taxi Driver";
     text-transform: uppercase;
     transition: all 0.4s ease-out;
+    position: relative;
 }
+.nav-bar a::before {
+    background-color: currentColor;
+    content: ' ';
+    height: 2px;
+    position: absolute;
+    top: -10px;
+    left: 0;
+    transform-origin: left;
+    transform: scaleX(0);
+    transition: all 0.2s ease-out;
+    width: 100%;
+}
+.nav-bar a:hover::before {
+    transform: scaleX(1);
+}
+
+.nav-bar a::after {
+    background-color: currentColor;
+    content: ' ';
+    height: 2px;
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: all 0.2s ease-out;
+    width: 100%;
+}
+.nav-bar a:hover::after {
+    transform: scaleX(1);
+}
+
 .max-nav a {
     font-size: 1em;
     color: #C5EFF7;
@@ -105,37 +138,63 @@ header {
         display: grid;
         grid-area: mnu;
     }
-    .hambuguer {
+    .hamburguer {
         width: 28px;
         height: 3px;
-        background-color: #C5EFF7;
         position: relative;
+        transition: all 0.4s ease-out;
     }
-    .hambuguer::before {
+    .hamburguer::before {
         content: '';
         width: 100%;
         height: 100%;
-        background-color: #C5EFF7;
+        left: 0;
         position: absolute;
         top: -8px;
-        left: 0;
+        transition: all 0.4s ease-out;
     }
-    .hambuguer::after {
+    .hamburguer::after {
         content: '';
         width: 100%;
         height: 100%;
-        background-color: #C5EFF7;
+        left: 0;
         position: absolute;
         top: 8px;
-        left: 0;
+        transition: all 0.4s ease-out;
+    }
+    .close-btn {
+        transform: rotateZ(45deg);
+        width: 32px;
+    }
+    .close-btn::before, .close-btn::after {
+        transform: rotateZ(90deg);
+        top: 0;
+    }
+    .max-hamburguer, .max-hamburguer::before, .max-hamburguer::after {
+        background-color: #C5EFF7;
+    }
+    .min-hamburguer, .min-hamburguer::before, .min-hamburguer::after {
+        background-color: #2574A9;
     }
     .nav-bar {
         position: absolute;
-        top: 80px;
         left: 0;
         width: 100%;
-        height: calc(100vh - 80px);
         background-color: #2980B9;
+        transform: translateX(-100%);
+        transition: all 0.4s ease-out;
+    }
+    .max-nav {
+        top: 80px;
+        height: calc(100vh - 80px);
+    }
+    .min-nav {
+        top: 60px;
+        height: calc(100vh - 60px);
+    }
+
+    .menu-opened {
+        transform: translateX(0);
     }
     .nav-bar ul {
         grid-auto-flow: row;
@@ -144,6 +203,10 @@ header {
     }
     .nav-bar li {
         text-align: center;
+    }
+    .min-nav a {
+        font-size: 1em;
+        color: #C5EFF7;
     }
     
 }
